--- a/worblehat-web/src/main/resources/templates/bookList.html
+++ b/worblehat-web/src/main/resources/templates/bookList.html
@@ -31,5 +31,6 @@
 	</table>
 	<hr />
 	<a th:href="@{/}">Back to Home</a>
+	<p>Version: <span th:text="${buildVersion}"></span></p>
 </body>
 </html>
