--- a/worblehat-web/src/main/resources/templates/borrow.html
+++ b/worblehat-web/src/main/resources/templates/borrow.html
@@ -16,6 +16,7 @@
 		<input type="submit" id="borrowBook" value="Borrow Book" />
 		<hr />
 		<a th:href="@{/}">Back to Home</a>
+		<p>Version: <span th:text="${buildVersion}"></span></p>
 	</form>
 
 
