Borroring handling added

--- a/worblehat-web/src/main/resources/templates/enterMailForBorrowingOverview.html
+++ b/worblehat-web/src/main/resources/templates/enterMailForBorrowingOverview.html
@@ -10,7 +10,7 @@
 		 Email Address:<input id="emailAddress" type="text" th:field="*{emailAddress}" />
 		<span th:if="${#fields.hasErrors('emailAddress')}" th:errors="*{emailAddress}"></span>
 		<br />
-		<input type="submit" id="returnAllBooks" value="Return All Books" />
+		<input type="submit" id="returnAllBooks" value="Show Bookings" />
 
 	</form>
 
