--- a/worblehat-web/src/main/resources/templates/home.html
+++ b/worblehat-web/src/main/resources/templates/home.html
@@ -11,7 +11,7 @@
     <li><a th:href="@{/insertBooks}">Add a new book</a></li>
     <li><a th:href="@{/borrow}">Borrow Book</a></li>
     <li><a th:href="@{/returnAllBooks}">Return all Books</a></li>
-    <li><a th:href="@{/bookListByReturnDate}">Show Books ordered  by Returndate</a></li>
+    <li><a th:href="@{/bookListByReturnDate}">Show borrowed books</a></li>
     <li><a th:href="@{/showPersonalBookings}">Show personal borrowings</a></li>
 </ul>
 <p>Version: <span th:text="${buildVersion}"></span></p>
