--- a/worblehat-web/src/main/resources/templates/personalBookListByReturnDate.html
+++ b/worblehat-web/src/main/resources/templates/personalBookListByReturnDate.html
@@ -17,7 +17,7 @@
 		<tr th:each="book : ${books}">
 			<td th:text="${book.title}">Harry Potter</td>
 			<td th:text="${book.isbn}">123456</td>
-			<td th:text="${book?.borrowing?.returnDate}">01.01.2020</td>
+			<td th:text="${#dates.format(book?.borrowing?.returnDate, 'dd-MM-yyyy')}"></td>
 		</tr>
 	</tbody>
 	</table>
