--- a/worblehat-web/src/main/resources/templates/home.html
+++ b/worblehat-web/src/main/resources/templates/home.html
@@ -2,18 +2,346 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>&#129412; Worblehat Bookmanager</title>
-</head>
-<body>
-<h1 id="welcome_heading">&#129412; <span th:text="${@environment.getProperty('spring.application.name')}"></span></h1>
+    <style type="text/css">
+html {
+  height: 100%;
+  background: linear-gradient(to left, #FF8008, #FFC837);
+}
 
-<ul>
-    <li><a th:href="@{/bookList}">Show all Books</a></li>
-    <li><a th:href="@{/insertBooks}">Add a new book</a></li>
-    <li><a th:href="@{/borrow}">Borrow Book</a></li>
-    <li><a th:href="@{/returnAllBooks}">Return all Books</a></li>
-    <li><a th:href="@{/bookListByReturnDate}">Show borrowed books</a></li>
-    <li><a th:href="@{/showPersonalBookings}">Show personal borrowings</a></li>
-</ul>
-<p>Version: <span th:text="${buildVersion}"></span></p>
+.unicorn {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-left: -250px;
+  margin-top: -30px;
+}
+
+.tail > div,
+.body > div,
+.leg > div,
+.leg2 > div,
+.leg3 > div,
+.unihorn {
+  width: 0;
+  height: 0;
+  position: absolute;
+  -webkit-transform-origin: 50% 50%;
+          transform-origin: 50% 50%;
+}
+
+.tail .pone {
+  border-left: 30px solid transparent;
+  border-right: 40px solid transparent;
+  border-bottom: 30px solid #ffb82b;
+  -webkit-transform: rotate(6deg);
+          transform: rotate(6deg);
+}
+.tail .ptwo {
+  border-left: 40px solid transparent;
+  border-right: 30px solid transparent;
+  border-bottom: 30px solid #FD8A07;
+  -webkit-transform: rotate(-39deg);
+          transform: rotate(-39deg);
+  top: 26px;
+  left: -30px;
+}
+.tail .pthree {
+  border-top: 30px solid transparent;
+  border-bottom: 30px solid transparent;
+  border-right: 30px solid #ffb82b;
+  -webkit-transform: rotate(5deg);
+          transform: rotate(5deg);
+  top: 45px;
+  left: -12px;
+}
+.tail .pfour {
+  top: 72px;
+  left: 17px;
+  border-bottom: 35px solid #FD8A07;
+  border-right: 35px solid transparent;
+  -webkit-transform: rotate(5deg);
+          transform: rotate(5deg);
+}
+
+.body .pone {
+  border-top: 10px solid transparent;
+  border-left: 221px solid #FD8A07;
+  border-bottom: 60px solid transparent;
+  -webkit-transform: rotate(40deg);
+          transform: rotate(40deg);
+  top: 65px;
+  left: 45px;
+}
+.body .ptwo {
+  border-bottom: 70px solid #ffb82b;
+  border-left: 90px solid transparent;
+  border-right: 130px solid transparent;
+  -webkit-transform: rotate(43deg);
+          transform: rotate(43deg);
+  top: 15px;
+  left: 87px;
+}
+.body .pthree {
+  border-bottom: 100px solid #FD8A07;
+  border-left: 20px solid transparent;
+  border-right: 130px solid transparent;
+  -webkit-transform: rotate(71deg);
+          transform: rotate(71deg);
+  top: 15px;
+  left: 200px;
+}
+.body .pfour {
+  border-bottom: 100px solid #ffb82b;
+  border-left: 30px solid transparent;
+  border-right: 130px solid transparent;
+  -webkit-transform: rotate(109deg);
+          transform: rotate(109deg);
+  top: 38px;
+  left: 246px;
+}
+.body .pfive {
+  border-bottom: 60px solid #FD8A07;
+  border-right: 105px solid transparent;
+  left: 310px;
+  top: -27px;
+  -webkit-transform: rotate(34deg);
+          transform: rotate(34deg);
+}
+.body .psix {
+  border-top: 85px solid #ffb82b;
+  border-left: 85px solid transparent;
+  left: 319px;
+  top: -40px;
+  -webkit-transform: rotate(19deg);
+          transform: rotate(19deg);
+}
+.body .pseven {
+  border-bottom: 110px solid #FD8A07;
+  border-left: 85px solid transparent;
+  left: 350px;
+  top: -144px;
+  -webkit-transform: rotate(19deg);
+          transform: rotate(19deg);
+}
+.body .peight {
+  border-bottom: 90px solid #ffb82b;
+  border-right: 120px solid transparent;
+  left: 425px;
+  top: -92px;
+  -webkit-transform: rotate(18deg);
+          transform: rotate(18deg);
+}
+.body .eye {
+  background-color: #000;
+  top: -70px;
+  left: 445px;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+.nose {
+  border-bottom: 40px solid #f27d00;
+  border-right: 40px solid transparent;
+  -webkit-transform: rotate(-28deg);
+          transform: rotate(-28deg);
+  left: 480px;
+  top: -15px;
+}
+
+.extreme-left {
+  border-top: 115px solid transparent;
+  border-right: 30px solid #ffb82b;
+  border-bottom: 110px solid transparent;
+  -webkit-transform: rotate(-65deg);
+          transform: rotate(-65deg);
+  left: 130px;
+  top: 4px;
+}
+
+.leg .pone {
+  border-top: 120px solid transparent;
+  border-right: 60px solid #FD8A07;
+  border-bottom: 0px solid transparent;
+  -webkit-transform: rotate(-50deg);
+          transform: rotate(-50deg);
+  top: 55px;
+  left: 45px;
+}
+.leg .ptwo {
+  border-top: 20px solid transparent;
+  border-right: 30px solid #ffb82b;
+  border-bottom: 20px solid transparent;
+  top: 145px;
+  -webkit-transform: rotate(-24deg);
+          transform: rotate(-24deg);
+  left: 66px;
+}
+.leg .pthree {
+  border-top: 15px solid transparent;
+  border-right: 33px solid #FD8A07;
+  border-bottom: 20px solid transparent;
+  top: 164px;
+  -webkit-transform: rotate(34deg);
+          transform: rotate(34deg);
+  left: 63px;
+}
+.leg .pfour {
+  border-left: 0 solid transparent;
+  border-right: 20px solid transparent;
+  border-bottom: 100px solid #ffb82b;
+  -webkit-transform: rotate(-15deg);
+          transform: rotate(-15deg);
+  top: 165px;
+  left: 80px;
+}
+.leg .pfive {
+  border-bottom: 30px solid #FD8A07;
+  border-right: 30px solid transparent;
+  top: 235px;
+  -webkit-transform: rotate(-15deg);
+          transform: rotate(-15deg);
+  left: 89px;
+}
+
+.extreme-right {
+  left: 246px;
+  top: 100px;
+  border-top: 30px solid #FD8A07;
+  border-left: 80px solid transparent;
+  border-right: 85px solid transparent;
+  -webkit-transform: rotate(-33deg);
+          transform: rotate(-33deg);
+}
+
+.leg2 .pone {
+  border-top: 50px solid #ffb82b;
+  border-right: 85px solid transparent;
+  left: 339px;
+  top: 84px;
+  -webkit-transform: rotate(-53deg);
+          transform: rotate(-53deg);
+}
+.leg2 .ptwo {
+  border-bottom: 20px solid #FD8A07;
+  border-left: 42px solid transparent;
+  border-right: 30px solid transparent;
+  -webkit-transform: rotate(62deg);
+          transform: rotate(62deg);
+  left: 328px;
+  top: 146px;
+}
+.leg2 .pthree {
+  border-left: 0 solid transparent;
+  border-right: 20px solid transparent;
+  border-bottom: 100px solid #ffb82b;
+  -webkit-transform: rotate(-15deg);
+          transform: rotate(-15deg);
+  top: 154px;
+  left: 368px;
+}
+.leg2 .pfour {
+  border-bottom: 30px solid #FD8A07;
+  border-right: 30px solid transparent;
+  top: 230px;
+  -webkit-transform: rotate(-15deg);
+          transform: rotate(-15deg);
+  left: 378px;
+}
+
+.leg3 .pone {
+  border-top: 50px solid transparent;
+  border-left: 60px solid #ef7b00;
+  border-bottom: 30px solid transparent;
+  left: 382px;
+  top: 60px;
+  -webkit-transform: rotate(6deg);
+          transform: rotate(6deg);
+}
+.leg3 .ptwo {
+  border-left: 0px solid transparent;
+  border-right: 30px solid transparent;
+  border-top: 50px solid #e87604;
+  left: 419px;
+  top: 116px;
+  -webkit-transform: rotate(-18deg);
+          transform: rotate(-18deg);
+}
+.leg3 .pthree {
+  border-bottom: 30px solid #e5892d;
+  border-left: 13px solid transparent;
+  left: 411px;
+  top: 143px;
+  -webkit-transform: rotate(-17deg);
+          transform: rotate(-17deg);
+}
+.leg3 .pfour {
+  border-bottom: 30px solid #FD8A07;
+  border-right: 30px solid transparent;
+  top: 173px;
+  -webkit-transform: rotate(76deg);
+          transform: rotate(76deg);
+  left: 403px;
+}
+
+.unihorn {
+  top: -130px;
+  left: 446px;
+  border-top: 10px solid transparent;
+  border-left: 120px solid #FD8A07;
+  border-bottom: 10px solid transparent;
+  -webkit-transform: rotate(-36deg);
+          transform: rotate(-36deg);
+}
+
+    </style>
+</head>
+
+<body>
+<div class='unicorn'>
+  <div class='tail'>
+    <div class='pone'></div>
+    <div class='ptwo'></div>
+    <div class='pthree'></div>
+    <div class='pfour'></div>
+  </div>
+  <div class='body'>
+    <div class='pone'></div>
+    <div class='ptwo'></div>
+    <div class='pthree'></div>
+    <div class='pfour'></div>
+    <div class='pfive'></div>
+    <div class='psix'></div>
+    <div class='pseven'></div>
+    <div class='peight'></div>
+    <div class='eye'></div>
+    <div class='nose'></div>
+    <div class='extreme-left'></div>
+    <div class='extreme-right'></div>
+  </div>
+  <div class='leg'>
+    <div class='pone'></div>
+    <div class='ptwo'></div>
+    <div class='pthree'></div>
+    <div class='pfour'></div>
+    <div class='pfive'></div>
+  </div>
+  <div class='leg2'>
+    <div class='pone'></div>
+    <div class='ptwo'></div>
+    <div class='pthree'></div>
+    <div class='pfour'></div>
+  </div>
+  <div class='leg3'>
+    <div class='pone'></div>
+    <div class='ptwo'></div>
+    <div class='pthree'></div>
+    <div class='pfour'></div>
+  </div>
+  <div class='unihorn'></div>
+</div>
+
+
 </body>
 </html>
