--- a/worblehat-web/src/main/resources/templates/bookList.html
+++ b/worblehat-web/src/main/resources/templates/bookList.html
@@ -4,18 +4,19 @@
 	<title>Show all Books</title>
 </head>
 <body>
-	<table class="bookList">
+	<h1>All books in the library</h1>
+	<table class="table table-striped">
 	<thead>
 		<tr>
-			<th>Title</th>
+			<th  scope="col">Title</th>
 
-			<th>Description</th>
-			<th>Author</th>
-			<th>Year</th>
-			<th>Edition</th>
-			<th>ISBN</th>
-			<th>Borrower</th>
-			<th>Borrowdate</th>
+			<th scope="col">Description</th>
+			<th scope="col">Author</th>
+			<th scope="col">Year</th>
+			<th scope="col">Edition</th>
+			<th scope="col">ISBN</th>
+			<th scope="col">Borrower</th>
+			<th scope="col">Borrowdate</th>
 		</tr>
 	</thead>
 	<tbody>
